fix: modal clipping bug

--- a/styles/landingPage.css
+++ b/styles/landingPage.css
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body, html {
   font-family: 'Libre Franklin', sans-serif;
+  overflow-x: hidden;
+
 }
 
 .hero {
@@ -422,6 +423,8 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .close-btn {
@@ -704,6 +707,21 @@ hr {
   .travel-card img {
     height: 10rem;
   }
+   .foot-logo {
+    margin: 0 0 1rem 0;
+    justify-content: flex-start;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .foot-logo img {
+    width: 7rem;
+    max-width: 80vw;
+    height: auto;
+    object-fit: contain;
+    display: block;
+  }
+
 
   /* Modal */
   .modal-content {
